--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "recipe",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://bryang09.github.io/recipe",
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.4.1",
@@ -13,6 +14,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.0"
   }
 }
